align fix

--- a/src/Form.css
+++ b/src/Form.css
@@ -4,6 +4,12 @@ body {font-family: Arial, Helvetica, sans-serif;
 }
 * {box-sizing: border-box;}
 
+.parent{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 /* Full-width input fields */
 input[type=text], input[type=number] {
     width: 100%;
